# bitray

./: .gitignore  Cargo.toml  README.md  \  image.ppm
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  image_writer.rs  interval.rs  lib.rs  main.rs  mesh.rs  onb.rs  pdf.rs  quad.rs  rand_vec3.rs  ray.rs  render_parameters.rs  sphere.rs  texture.rs  triangle.rs  vertex.rs
src/materials/: dielectric.rs  diffuse_light.rs  lambert.rs  material.rs  metal.rs  mod.rs
src/renderers/: mod.rs  ray_color.wgsl  rayon.rs  wgpu.rs
