[package]
name = "bitray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.20.0"
glam = "0.25.0"
image = "0.24.8"
pollster = "0.4.0"
rand = "0.8.5"
rayon = "1.8.1"
russimp = "3.2.0"
wgpu = "23.0.1"

[features]
f64 = []
